@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Implemented RFC 52 LayerResultsGetShape support for OGR connection type.
+
 - Fixed uninitialized variable with malloc used in osPointCluster() (#3236)
 
 - Oracle driver: remove BLOB columns instead of changing them to null (#3228)
